# yangyibiao.github.io

./: README.md  branding.js  defaultstyle.css  fullpub.html  generate_papers.py  index-en.html  index-new.html  index.html  llvm-run.py  paper.json  research.html  style.css  stylesheet.css
.github/workflows/: jekyll-gh-pages.yml
cpl/: README.md  generate.sh  index-2022.md  index.html  index.md
cpl/code/: binarysearch.c  bsearch-part.c  bsearch-re.c  conveyLifeGame-part.c  merge.c  mergesort-re.c  sum-re.c
cpl/css/: logo.css  main.css  table.css
cpl/js/: parser.js
cpl/sjsy/: 01.html  01.md  02.html  02.md  03.html  03.md  04.html  04.md  05.html  05.md  cal.md
cpl/slides/: 0-0-intro.html  0-0-intro.md  0-1-clang.html  0-1-clang.md  0-2-hello.html  0-2-hello.md  0-basic.html  0-intro.html  0-intro.md  00-CourseIntroduction.html  00-CourseIntroduction.md  01-IntroC.html  01-IntroC.md  01-IntroducingC.html  01-IntroducingC.md  01.html  01.md  02-CFundamentals.html  02-CFundamentals.md  02.html  02.md  03-FormattedIO.html  03-FormattedIO.md  03.html  03.md  03w-Arrays.html  03w-Arrays.md  04-Expressions.html  04-Expressions.md  04.html  04.md  05-SelectionStatements.html  05-SelectionStatements.md  05.html  05.md  06-Loops.html  06-Loops.md  (+95 more)
cpl/slides-2022/: 02-CFundamentals.html  02-CFundamentals.md  04-Expressions.html  06-Loops.md  07-BasicTypes.html  10-ProgramOrganization.html  13-Strings.html  14-Preprocessor.md  15-WritingLargePrograms.html  17-AdvancedUsesOfPointers.html  22-InputOutput.md
cpl/slides/1-types-io/oj-code/: CMakeLists.txt  ascii.c  azimuth.c  change.c  equation.c  gas.c  julian.c  memory-viewer.c  panel.c  pi-2.c  sensor.c  time.c  username.c
cpl/slides/2-if-for-array/oj-code/: CMakeLists.txt  blackhole.c  clock.c  collatz.c  converter-1.c  factorial-1.c  factorial-2.c  inverse.c  leap.c  prime.c  rank.c  selfpower.c  series.c  single.c  standup.c  triangle.c
cpl/slides/3-for-a-while/oj-code/: CMakeLists.txt  a-b-ex.c  b-ternary-1.c  b-ternary-2.c  bubble-sort.c  calculator.c  calendar.c  decimal.c  flip.c  gcd.c  josephus.c  multiplication-table.c  palindrome-1.c  palindrome-2.c  quick-sort.c  super-cal.c
cpl/slides/4-loops/oj-code/: CMakeLists.txt  behaviors.c  bit.c  conveyLife.c  cube-rotation.c  equation-2.c  formation.c  guess.c  life.c  magic-square.c  match.c  matrix-mult.c  mines-1.c  obstacle.c  seer.c  similarity.c  softmax.c  statistics.c  sudoku.c  trace.c
cpl/slides/6-data-types/code/: CMakeLists.txt  cmp.c  cmpFloat.c  cmpQuiz.c  endian.c  float.c  function.c  hello.c  inf-nan.c  intsize.c  overflow.c  printBinary.c  print_bits.c  sign-unsign.c  sizeof.c  strlenCmp.c
css/: style.css  stylesheet.css
js/: listfullpubs.js  listselectedbib.js  listselectedpubs.js  paper_display.js  paper_display_full.js  paper_display_selected.js
(+344 files in other folders)
