add_executable(time time.c)
add_executable(username username.c)
add_executable(memory-viewer memory-viewer.c)
add_executable(panel panel.c)
add_executable(azimuth azimuth.c)
add_executable(ascii ascii.c)
add_executable(gas gas.c)
add_executable(pi-2 pi-2.c)
add_executable(change change.c)
add_executable(sensor sensor.c)
add_executable(equation equation.c)
add_executable(julian julian.c)