
add_executable(triangle triangle.c)
add_executable(single single.c)
add_executable(factorial-1 factorial-1.c)
add_executable(factorial-2 factorial-2.c)
add_executable(converter-1 converter-1.c)
add_executable(backhole blackhole.c)
add_executable(standup standup.c)
add_executable(rank rank.c)
add_executable(clock clock.c)
add_executable(leap leap.c)
add_executable(selfpower selfpower.c)
add_executable(series series.c)
add_executable(collatz collatz.c)
add_executable(inverse inverse.c)
add_executable(prime prime.c)