add_executable(flip flip.c)
add_executable(palindrome-1 palindrome-1.c)
add_executable(bubble-sort bubble-sort.c)
add_executable(josephus josephus.c)
add_executable(gcd gcd.c)
add_executable(multiplication-table multiplication-table.c)
add_executable(calendar calendar.c)
add_executable(b-ternary-1 b-ternary-1.c)
add_executable(b-ternary-2 b-ternary-2.c)
add_executable(calculator calculator.c)
add_executable(decimal decimal.c)
add_executable(palindrome-2 palindrome-2.c)
add_executable(quick-sort quick-sort.c)
add_executable(a_b_ex a-b-ex.c)
add_executable(super-cal super-cal.c)