add_executable(matrix-mult matrix-mult.c)
add_executable(sudoku sudoku.c)
add_executable(mines-1 mines-1.c)
add_executable(behaviors behaviors.c)
add_executable(match match.c)
add_executable(guess guess.c)
add_executable(magic-square magic-square.c)
add_executable(bit bit.c)
add_executable(similarity similarity.c)
add_executable(equation-2 equation-2.c)
add_executable(seer seer.c)
add_executable(cube-rotation cube-rotation.c)
add_executable(formation formation.c)
add_executable(trace trace.c)
add_executable(life life.c)
add_executable(obstacle obstacle.c)
add_executable(statistics statistics.c)
add_executable(softmax softmax.c)